--- a/FundSharer/Content/sb-admin-2.css
+++ b/FundSharer/Content/sb-admin-2.css
@@ -4,7 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
-  background-color: #f8f8f8;
+    /*  background-color: #f8f8f8;*/
+    background-color: #edda06;
 }
 #wrapper {
   width: 100%;
