--- a/FundSharer/Views/Payments/ConfirmPayment.cshtml
+++ b/FundSharer/Views/Payments/ConfirmPayment.cshtml
@@ -2,44 +2,53 @@
 @model PaymentDetails
 
 @{
-    ViewBag.Title = "ConfirmPayment";
+    ViewBag.Title = "Confirm Payment";
 }
 
-<h2>ConfirmPayment</h2>
-
-<div class="panel center-block text-info">
-    @using (Html.BeginForm("ConfirmPayment", "Payments", FormMethod.Post, new { Model.PaymentId }))
-    {
-        <div class="row">
-            @Html.AntiForgeryToken()
-            <div class="form-group col-md-6">
-                <dl class="center-block">
-                    <dt>@Html.DisplayNameFor(m => Model.DonorName)</dt>
-                    <dd>@Html.DisplayFor(m => Model.DonorName)</dd>
-
-
-                    <dt>@Html.DisplayNameFor(m => Model.RecipientAccountNumber)</dt>
-                    <dd>@Html.DisplayFor(m => Model.RecipientAccountNumber)</dd>
-
-                    <dt>@Html.DisplayName("Amount:")</dt>
-                    <dd>@Html.DisplayFor(m => Model.Amount)</dd>
-
-                    <dt>@Html.DisplayNameFor(m => Model.Date)</dt>
-                    <dd>@Html.DisplayFor(m => Model.Date)</dd>
-                </dl>
+<div class="Row">
+    <div class="col-md-12">
+        <div class="panel panel-success text-info">
+            <div class="panel-heading">
+                <div class="panel-title">Please confirm the payment from @Model.DonorName</div>
             </div>
-            <div class="form-group col-md-6">
-                @{
-                    var base64 = Convert.ToBase64String(Model.POPimage, 0, Model.POPimage.Length);
-                    var imgsrc = String.Format("data:image/jpg;base64,{0}", base64);
-                }
-                <img src='@imgsrc' class="img-responsive media-middle"/>
+            <div class="panel-body">
+                <div class="form-inline">
+                        @using (Html.BeginForm("ConfirmPayment", "Payments", FormMethod.Post, new { Id = Model.PaymentId }))
+                        {
+                       <div class="row">
+                        <div class="col-md-5">
+                            @Html.AntiForgeryToken()
+                            <dl class="dl-horizontal h4">
+                                <dt>@Html.DisplayNameFor(m => Model.RecipientName)</dt>
+                                <dd>@Html.DisplayFor(m => Model.RecipientName)</dd>
+
+                                <dt>@Html.DisplayNameFor(m => Model.Date)</dt>
+                                <dd>@Html.DisplayFor(m => Model.Date)</dd>
+                            </dl>
+                        </div>
+                        <div class="col-md-5">
+                            @{
+                                var base64 = Convert.ToBase64String(Model.POPimage, 0, Model.POPimage.Length);
+                                var imgsrc = String.Format("data:image/jpg;base64,{0}", base64);
+                            }
+                            <div class="img-responsive"><img src='@imgsrc' class="img-responsive media-middle" /></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <input type="submit" class="btn btn-success btn-lg btn-block" value="Confirm"/>
+                        </div>
+                        <div class="col-md-3">
+                            <button type="reset" class="btn btn-danger btn-lg btn-block">Cancel</button>
+                        </div>
+                        <div class="col-md-3">
+                            <div><i class="fa fa-warning fa-3x"></i>@Html.ActionLink("Report an issue", "Report", "Manage", new { Id = Model.PaymentId })</div>
+                        </div>
+                    </div>
+                 }
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="form-group center-block">
-            <input type="submit" class="btn-primary glyphicon glyphicon-check" value="Confirm" />
-            </div>
-        </div>
-     }
+    </div>
 </div>
+          
