--- a/FundSharer/Views/Shared/_UserDetails.cshtml
+++ b/FundSharer/Views/Shared/_UserDetails.cshtml
@@ -1,10 +1,10 @@
 ﻿@using FundSharer.Models;
 @model UserDetails
-    <div>
-        <div class="text-info">
+    <div class="text-info">
+        <div class="row">
             <dl class="dl-horizontal">
                 <dt>@Html.DisplayNameFor(model => Model.FirstName)</dt>
-                <dd>@Html.DisplayTextFor(model => Model.FirstName)</dd>
+                <dd>@Html.DisplayFor(model => Model.FirstName)</dd>
                 <dt>@Html.DisplayNameFor(model => Model.LastName)</dt>
                 <dd>@Html.DisplayFor(model => Model.LastName)</dd>
                 <dt>@Html.DisplayNameFor(model => Model.UserName)</dt>
@@ -12,22 +12,34 @@
                 <dt>@Html.DisplayNameFor(model => Model.PhoneNumber)</dt>
                 <dd>@Html.DisplayFor(model => Model.PhoneNumber)</dd>
                 </dl>
+            </div>
                @if (User.IsInRole("Administrator"))
                {
-                <dl class="dl-horizontal">
-                <dt>@Html.DisplayNameFor(model => Model.LastLoginDate)</dt>
-                <dd>@Html.DisplayFor(model => Model.LastLoginDate)</dd>
-                <dt>@Html.DisplayNameFor(model => Model.IsLocked)</dt>
-                <dd>@Html.DisplayFor(model => Model.IsLocked)</dd>
-                </dl>
-                @Html.ActionLink("View Account Details", "Details", "Account", new {Id= Model.AccountId})
-                @Html.ActionLink("Back to list", "Users", "Account")
+
+                <div class="row">
+                    <dl class="dl-horizontal">
+                        <dt>@Html.DisplayNameFor(model => Model.LastLoginDate)</dt>
+                        <dd>@Html.DisplayFor(model => Model.LastLoginDate)</dd>
+                        <dt>@Html.DisplayNameFor(model => Model.IsLocked)</dt>
+                        <dd>@Html.DisplayFor(model => Model.IsLocked)</dd>
+                    </dl>
+                </div>
+                <div class="row">
+                    @Html.ActionLink("View Account Details", "Details", "Account", new {Id= Model.AccountId})
+                    @Html.ActionLink("Back to list", "Users", "Account")
+                </div>
                }
                else
                {
-                <div id="uEditLink"><a href="#" id="aEditLink" onclick="RenderEdit(uEditLink)"><i class="fa fa-edit" />Edit</a></div>
+                <div class="row">
+                    <div style="padding-left:5em"><button id="uButtonEdit" class="btn btn-success"><i class="fa fa-edit"></i>Edit</button></div>
+                </div>
+                <script language="javascript" type="text/javascript">
+                    $("#uButtonEdit").on("click", function () {
+                        $("#uPanel").load("/Account/Edit");
+                    });
+                </script>
                }
         </div>
-    </div>
 
                     
