--- a/FundSharer/Views/BankAccounts/_Edit.cshtml
+++ b/FundSharer/Views/BankAccounts/_Edit.cshtml
@@ -1,15 +1,23 @@
 ﻿@using FundSharer.Models;
-@model RegisterViewModel
+@model BankAccountDetails
+@using (Ajax.BeginForm("Edit", "BankAccounts", new { Model }, new AjaxOptions { HttpMethod = "post", InsertionMode = InsertionMode.Replace, UpdateTargetId = "aPanel" }))
+{
 <dl class="text-info">
     <dt>@Html.Label("Account Title")</dt>
-    <dd><div id="aAccountTitle">@Html.DisplayTextFor(m => Model.AccountTitle)</div></dd>
+    <dd><div id="aAccountTitle">@Html.TextBoxFor(m => Model.AccountTitle)</div></dd>
     <dt>@Html.Label("Account Number")</dt>
-    <dd><div id="aAccountNumber">@Html.DisplayTextFor(m => Model.AccountNumber)</div></dd>
+    <dd><div id="aAccountNumber">@Html.TextBoxFor(m => Model.AccountNumber)</div></dd>
     <dt>@Html.Label("Bank Name")</dt>
-    <dd><div id="aBankName">@Html.DisplayTextFor(m => Model.BankName)</div></dd>
+    <dd><div id="aBankName">@Html.TextBoxFor(m => Model.BankName)</div></dd>
 </dl>
 <hr />
 <div id="aButtons" class="EditButtons">
-    <button id="aButtonSubmit" class="btn btn-success" onclick="SaveChanges(aButtonSubmit)" hidden="hidden">Save</button>
-    <button id="aButtonCancel" class="btn btn-danger" onclick="Cancel(aButtonCancel)" hidden="hidden">Cancel</button>
+    <input type="submit" class="btn btn-success" value="Save"/>
+    <button id="aButtonCancel" class="btn btn-danger">Cancel</button>
 </div>
+<script language="javascript" type="text/javascript">
+        $("#aButtonCancel").on("click", function(){
+            $("#aPanel").load("/BankAccounts/Details", {Id = Model.Id});
+        });
+</script>
+}
