--- a/FundSharer/Views/Payments/UploadPaymentInfo.cshtml
+++ b/FundSharer/Views/Payments/UploadPaymentInfo.cshtml
@@ -10,7 +10,7 @@
     <div class="col-sm-10 col-sm-offset-1">
         <div  class="panel panel-success">
             <div class=" panel-heading">
-                <div class="panel-title huge">Pleas upload a proof of payment document</div>
+                <div class="panel-title huge">Please upload a proof of payment document</div>
             </div>
             <div class="panel-body">
                 <div class="text-info">
